--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
     </div>
     <ul class="thumb">
-        <li><img src="images/thumb1.png" onclick="imgSlider('images/img1.png'); changeCircleColor('#b3a47a')"></li>
+        <li><img src="images/thumb1.png" onclick="imgSlider('images/img1.png'); changeCircleColor('#333')"></li>
         <li><img src="images/thumb2.png" onclick="imgSlider('images/img2.png'); changeCircleColor('#878f92')"></li>
-        <li><img src="images/thumb3.png" onclick="imgSlider('images/img3.png'); changeCircleColor('#85acbe')"></li>
+        <li><img src="images/thumb3.png" onclick="imgSlider('images/img3.png'); changeCircleColor('#F2CEA8')"></li>
     </ul>
     <ul class="sci">
         <li><a href="https://www.linkedin.com/in/lucas-%C3%B6hrn-ab8a08108/"><img src="images/linkedin.png" alt="LinkedIn Icon"></a></li>
